Fix more layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ body {
 input {
   transition: all 0.2s ease-in-out;
 }
+
+body * {
+  max-width: 100vw ;
+}
